# email-newsletter-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  init_db.bat
configuration/: base.yml
migrations/: 20231010233108_create_subscriptions_table.sql
src/: configuration.rs  helper.rs  lib.rs  main.rs  startup.rs  telemetry.rs  types.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
