[package]
name = "email-newsletter-api"
version = "0.1.0"
authors = ["Manuel <manuelinfosec@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "email-newsletter-api"
path = "src/main.rs"


[dependencies]
actix-web = "4.0.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"
