[package]
name = "email-newsletter-api"
version = "0.1.0"
authors = ["Manuel <manuelinfosec@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# [lib]
# path = "src/lib.rs"

[[bin]]
name = "email-newsletter-api"
path = "src/main.rs"

[dependencies]
actix-web = "4.0.0"
config = "0.11"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
once_cell = "1"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.5"

# Using table-like toml syntax to avoid long lines
[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls", # Use actix runtime
    "macros",               # access to `sqlx::query!` and `sqlx::query_as!`
    "postgres",             # postgres-specific functionality
    "uuid",                 # adds supports for mapping sql uuid to `Uuid type from `uuid` crate
    "chrono",               # support for SQL timestamptz to DateTime<T> from the `chrono` crate
    "migrate",              # managing migrations from application directly
]

[dev-dependencies]
reqwest = "0.11"
